# auth-in-fastapi-notes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  docker-compose.yaml  justfile  pyproject.toml
basic_auth/src/: main.py
basic_auth/src/alembic/: env.py  script.py.mako
basic_auth/src/alembic/versions/: fb4554c0e46f_first_commit.py
basic_auth/src/apis/: api.py
basic_auth/src/apis/utils/: authenticate.py  security.py
basic_auth/src/apis/v1/: routes.py
basic_auth/src/crud/: user.py
basic_auth/src/db/: session.py
basic_auth/src/models/: user.py
nginx/: nginx.conf
