[tool.poetry]
name = "auth-in-fastapi-notes"
version = "0.1.0"
description = "Authentication and authorization in FastAPI"
authors = ["AlessandroMiola <alessandro1.miola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
sqlmodel = "^0.0.16"
pre-commit = "^3.6.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py310"
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
select = [
  # default
  "E",      # pycodestyle error
  "F",      # flake8 error
  # extra
  "A",      # builtin shadowing
  "B",      # flake8 bugbear
  "BLE",    # avoid bare excepts
  "C4",     # simplify comprehensions
  "DTZ",    # datetime errors
  "FBT",    # avoid boolean trap
  "G",      # logging format
  "I",      # isort imports
  "N",      # conform to PEP8 naming rules
  "RET",    # return values
  "S",      # bandit
  "TRY",    # exceptions antipatterns
  "UP",     # upgrade syntax
  "W",      # pycodestyle warning
  "YTT",    # wrong usage of sys.info
]

[tool.ruff.lint.per-file-ignores]
"basic_auth/src/models/user.py" = ["N805"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
